kod ve css düzenlemeleri

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
           integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
           crossorigin="anonymous"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 
     <title>Document</title>
@@ -15,11 +17,9 @@
 
 <body>
 <div class=" container">
-    <div id="div">
-        <input class="input" id="input" placeholder="arama...">
-    </div>
-        <button id="button">
-        </button>
+        <input  class="input" id="input" placeholder="arama...">
+
+        <button class="button" id="button"></button>
 
 </div>
 
